[package]
name = "p2wsh-utxo"
description = "A library for working with unspent p2wsh bitcoin transactions"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"]}
anyhow = "1.0.56"
csv = "1.1"
serde_json = { version = "1.0" }
bincode = "1.3.3"
